@@ -39,6 +39,8 @@ Changes in openair 0.9-0 [2013-02-13]
 	supplied, add option month to allow only selected month(s)
 *	Fix bug when type = "wd" and some are missing (remove them)
 *	Don't open up graphic window in timeAverage
+*	Fix indexing problem in polarCluster which sometimes caused
+	the function to trip up
 
 
 Changes in openair 0.8-0 [2012-11-30]
